# parsing_task_2

./: GRAMMAR_DISCR.md  GRAMMAR_DISCR.txt  Makefile  README.md
src/: Analizator.cpp  Analizator.hpp  CMakeLists.txt  Token.hpp  Tokenizer.cpp  Tokenizer.hpp  Tree.hpp  main.cpp
ut/: CMakeLists.txt
